@@ -20,7 +20,7 @@ class display;
 namespace gui {
 
 enum TITLE_RESULT { TUTORIAL = 0, NEW_CAMPAIGN, MULTIPLAYER, LOAD_GAME,
-                    CHANGE_LANGUAGE, EDIT_PREFERENCES, BEG_FOR_UPLOAD, SHOW_ABOUT, QUIT_GAME, TITLE_CONTINUE };
+                    CHANGE_LANGUAGE, EDIT_PREFERENCES, BEG_FOR_UPLOAD, SHOW_ABOUT, QUIT_GAME, TITLE_CONTINUE, SHOW_HELP };
 
 TITLE_RESULT show_title(display& screen, config& tips_of_day, int* ntip);
 
