@@ -51,6 +51,7 @@ SVN trunk (1.1.2+svn):
    * slider for each player to adjust their base income
  * misc
    * fix alt key under MacosX
+   * help contents available from title screen
 
 Version 1.1.2:
  * campaigns
